--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "Aung Myo Kyaw",
+  "author": "Omar Rch",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
